<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaConsulta">

    <LinearLayout
        android:id="@+id/lyPrincipal_telaConsulta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitulo_telaConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:text="@string/tituloConsultaContatos"
            android:textAlignment="center"
            android:textColor="#263238"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLabelNome_telaConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblsnome"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tvNome_telaConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hintsCamposNomes"
                android:ems="10"
                android:hint="@string/hintsCamposNomes"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLabelTelefone_telaConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edTelefone_telaConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hintsCamposTelefones"
                android:inputType="textPersonName"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>